# lab1

./: CMakeLists.txt  Matrix1.txt  Matrix2.txt  README.md  check.ipynb  main.cc  main.cu  main.py  otchet.docx  result.txt  result_matrix.txt  times.txt  times_2.txt  times_4.txt  times_8.txt
cpp/: main.cc
output/: output_10.txt  output_100.txt  output_110.txt  output_20.txt  output_30.txt  output_40.txt  output_50.txt  output_60.txt  output_70.txt  output_80.txt  output_90.txt
